--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,22 +8,21 @@ Authors@R:
            email = "ijapesigan@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
 Description: Fit autoregressive models using 'RcppArmadillo'.
-URL: https://github.com/ijapesigan/fitAutoReg, https://ijapesigan.github.io/fitAutoReg/
+URL: https://github.com/ijapesigan/fitAutoReg,
+        https://ijapesigan.github.io/fitAutoReg/
 BugReports: https://github.com/ijapesigan/fitAutoReg/issues
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
-Depends:
-    R (>= 3.0.0)
-LinkingTo: 
-    Rcpp,
-    RcppArmadillo
-Imports: 
-    Rcpp
-Suggests:
-    knitr,
-    rmarkdown,
-    testthat
+Depends: R (>= 3.5.0)
+LinkingTo: Rcpp, RcppArmadillo
+Imports: Rcpp
+Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.2.3
+NeedsCompilation: yes
+Packaged: 2023-08-25 02:30:03 UTC; root
+Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
+    (<https://orcid.org/0000-0003-4818-8420>)
+Maintainer: Ivan Jacob Agaloos Pesigan <ijapesigan@gmail.com>
