--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person(given = "Ivan Jacob Agaloos",
            family = "Pesigan",
            role = c("aut", "cre", "cph"),
-           email = "ijapesigan@gmail.com",
+           email = "r.ijapesigan@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
 Description: Fit autoregressive models using 'RcppArmadillo'.
 URL: https://github.com/ijapesigan/fitAutoReg,
@@ -18,11 +18,11 @@ Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
 LinkingTo: Rcpp, RcppArmadillo
-Imports: Rcpp
+Imports: Rcpp, dynr, parallel
 Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2023-08-25 02:45:46 UTC; root
+Packaged: 2023-08-26 01:28:20 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
     (<https://orcid.org/0000-0003-4818-8420>)
-Maintainer: Ivan Jacob Agaloos Pesigan <ijapesigan@gmail.com>
+Maintainer: Ivan Jacob Agaloos Pesigan <r.ijapesigan@gmail.com>
