Update src to output generated at 6f3e9d9

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ S3method(coef,dynr_model)
 S3method(plot,dynr_model)
 S3method(print,dynr_model)
 export(FitMLVARDynr)
+export(FitMLVARMplus)
 export(FitVARDynr)
 export(FitVARLasso)
 export(FitVARLassoSearch)
+export(FitVARMplus)
 export(FitVAROLS)
 export(LambdaSeq)
 export(ModelVARP1Dynr)
