--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre", "cph"),
            email = "r.ijapesigan@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
-Description: Fit autoregressive models using 'RcppArmadillo'.
+Description: Fit autoregressive models using 'RcppArmadillo', `dynr`, and `Mplus`.
 URL: https://github.com/ijapesigan/fitAutoReg,
         https://ijapesigan.github.io/fitAutoReg/
 BugReports: https://github.com/ijapesigan/fitAutoReg/issues
@@ -22,7 +22,7 @@ Imports: Rcpp, dynr, parallel
 Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2023-08-26 01:28:20 UTC; root
+Packaged: 2023-08-27 01:22:17 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
     (<https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.ijapesigan@gmail.com>
