Update src to output generated at 029b292

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(PBootCI)
 export(PBootSE)
 export(PBootVARLasso)
 export(PBootVAROLS)
+export(RBootVARLasso)
+export(RBootVAROLS)
 export(SearchVARLasso)
 export(SelectVARLasso)
 export(SimVAR)
