Update src to output generated at aaa80c4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(coef,dynr_model)
 S3method(plot,dynr_model)
 S3method(print,dynr_model)
+export(BootCI)
+export(BootSE)
 export(FitMLVARDynr)
 export(FitMLVARMplus)
 export(FitVARDynr)
@@ -14,8 +16,6 @@ export(LambdaSeq)
 export(ModelVARP1Dynr)
 export(ModelVARP2Dynr)
 export(OrigScale)
-export(PBootCI)
-export(PBootSE)
 export(PBootVARLasso)
 export(PBootVAROLS)
 export(RBootVARLasso)
