--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,11 +18,11 @@ Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
 LinkingTo: Rcpp, RcppArmadillo
-Imports: Rcpp, dynr, parallel
+Imports: Rcpp
 Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2023-08-31 23:15:28 UTC; root
+Packaged: 2023-09-01 01:40:54 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
     (<https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.ijapesigan@gmail.com>
