--- a/.setup/pkgdown/_pkgdown.yml
+++ b/.setup/pkgdown/_pkgdown.yml
@@ -24,9 +24,6 @@ reference:
 - title: Utility Functions
   contents:
   - has_keyword("utils")
-- title: Methods Functions
-  contents:
-  - has_keyword("methods")
 - title: Data
   contents:
   - has_keyword("data")
@@ -38,8 +35,8 @@ reference:
 articles:
 - title: Vector Autoregressive Model
   contents:
-  - var-p1.Rmd
-  - var-p2.Rmd
+  - var-p1
+  - var-p2
 - title: Bootstrap
   contents:
-  - bootstrap.Rmd
+  - bootstrap
