--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,16 @@ export(LambdaSeq)
 export(OrigScale)
 export(PBootVARLasso)
 export(PBootVAROLS)
+export(RBootVARExoLasso)
+export(RBootVARExoOLS)
 export(RBootVARLasso)
 export(RBootVAROLS)
 export(SearchVARLasso)
 export(SelectVARLasso)
 export(SimVAR)
+export(SimVARExo)
 export(StdMat)
 export(YX)
+export(YXExo)
 importFrom(Rcpp,sourceCpp)
 useDynLib(fitAutoReg, .registration = TRUE)
