--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre", "cph"),
            email = "r.ijapesigan@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
-Description: Fit autoregressive models using 'RcppArmadillo', `dynr`, and `Mplus`.
+Description: Fit autoregressive models using 'RcppArmadillo'.
 URL: https://github.com/ijapesigan/fitAutoReg,
         https://ijapesigan.github.io/fitAutoReg/
 BugReports: https://github.com/ijapesigan/fitAutoReg/issues
@@ -19,10 +19,10 @@ VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
 LinkingTo: Rcpp, RcppArmadillo
 Imports: Rcpp
-Suggests: knitr, rmarkdown, testthat
+Suggests: knitr, rmarkdown, testthat, MASS
 RoxygenNote: 7.2.3
 NeedsCompilation: yes
-Packaged: 2023-09-03 23:20:45 UTC; root
+Packaged: 2023-09-04 00:47:53 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
     (<https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.ijapesigan@gmail.com>
