Update src to output generated at 403877e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(FitVARLassoSearch)
 export(FitVAROLS)
 export(LambdaSeq)
 export(OrigScale)
+export(PBootVARExoLasso)
+export(PBootVARExoOLS)
 export(PBootVARLasso)
 export(PBootVAROLS)
 export(RBootVARExoLasso)
